refactor: 마이페이지에 작성한 꿀조합 정보 조회 변경 (#57)
* test: 자신이 작성한 레시피 정보를 가져오는 테스트 코드 수정

* refactor: 레시피에 사용되는 상품 정보 삭제

* refactor: 마이페이지 꿀조합 정보 조회 응답 변경
[추가] 유저 정보 (닉네임, 프로필 사진 경로)
[삭제] 좋아요 개수
[삭제] 꿀조합에 사용된 상품 정보

* style: 코드 포맷 수정